--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,8 @@ phases:
   build:
     commands:
       - yarn config set version-tag-prefix 'v'
-      - yarn config set version-git-message '[deploy] tracker.js version: %%s'
+      - yarn config set version-git-message '[deploy] hoge.js'
       - yarn version --new-version patch
-
+  post_build:
+    commands:
+      - git push origin
