--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,8 @@
 version: 0.1
+environment_variables:
+  plaintext:
+    VERSION: patch
+    BRANCH: master
 phases:
   install:
     commands:
@@ -7,11 +11,12 @@ phases:
     commands:
       - git config --global user.name 'Masahiro Yamauchi'
       - git config --global user.email 'sgt.yamauchi@gmail.com'
+      - git checkout $BRANCH
   build:
     commands:
       - yarn config set version-tag-prefix 'v'
       - yarn config set version-git-message '[deploy] hoge.js'
-      - yarn version --new-version patch
+      - yarn version --new-version $VERSION
   post_build:
     commands:
-      - git push origin
+      - git push origin $BRANCH
